--- a/src/rpc/Abp.Rpc.Transport.DotNetty/Abp.Rpc.Transport.DotNetty.csproj
+++ b/src/rpc/Abp.Rpc.Transport.DotNetty/Abp.Rpc.Transport.DotNetty.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{472A480A-D42E-4D32-87E4-B21431544635}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{38BE1000-5478-48D3-9FC2-9FAFB523DBCF}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rpc.Client</RootNamespace>
-    <AssemblyName>Rpc.Client</AssemblyName>
+    <RootNamespace>Abp.Rpc.Transport.DotNetty</RootNamespace>
+    <AssemblyName>Abp.Rpc.Transport.DotNetty</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,16 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+    <Reference Include="DotNetty.Buffers, Version=0.3.2.0, Culture=neutral, PublicKeyToken=e7a0210a354f294a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Buffers-signed.0.3.2\lib\net45\DotNetty.Buffers.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Castle.Facilities.Logging, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Castle.LoggingFacility.3.3.0\lib\net45\Castle.Facilities.Logging.dll</HintPath>
+    <Reference Include="DotNetty.Codecs, Version=0.3.2.0, Culture=neutral, PublicKeyToken=e7a0210a354f294a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Codecs-signed.0.3.2\lib\net45\DotNetty.Codecs.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+    <Reference Include="DotNetty.Common, Version=0.3.2.0, Culture=neutral, PublicKeyToken=e7a0210a354f294a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Common-signed.0.3.2\lib\net45\DotNetty.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DotNetty.Transport, Version=0.3.2.0, Culture=neutral, PublicKeyToken=e7a0210a354f294a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Transport-signed.0.3.2\lib\net45\DotNetty.Transport.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -55,38 +56,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Adaper\TransportMessageChannelHandlerAdapter.cs" />
+    <Compile Include="DotNettyMessageSender.cs" />
+    <Compile Include="DotNettyServerMessageListener.cs" />
+    <Compile Include="DotNettyTransportClientFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RpcClientModule.cs" />
+    <Compile Include="ServiceCollectionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.ProxyGenerator\Abp.Rpc.ProxyGenerator.csproj">
-      <Project>{41251653-1219-4db1-a77b-fb6c932700b3}</Project>
-      <Name>Abp.Rpc.ProxyGenerator</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.Transport.DotNetty\Abp.Rpc.Transport.DotNetty.csproj">
-      <Project>{38be1000-5478-48d3-9fc2-9fafb523dbcf}</Project>
-      <Name>Abp.Rpc.Transport.DotNetty</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.Transport.Simple\Abp.Rpc.Transport.Simple.csproj">
-      <Project>{d52aee53-199a-446e-a73b-dbca1670ef0f}</Project>
-      <Name>Abp.Rpc.Transport.Simple</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc\Abp.Rpc.csproj">
-      <Project>{51dec5ed-8897-43c4-a612-44a2dd9da07b}</Project>
-      <Name>Abp.Rpc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\frame\Abp\Abp.csproj">
+    <ProjectReference Include="..\..\frame\Abp\Abp.csproj">
       <Project>{2c221d3b-5f54-4c5b-8082-318636415132}</Project>
       <Name>Abp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\modules\BodeAbp.Activity\BodeAbp.Activity.csproj">
-      <Project>{b60885e6-735e-4926-97a2-8699e6725f1f}</Project>
-      <Name>BodeAbp.Activity</Name>
+    <ProjectReference Include="..\Abp.Rpc\Abp.Rpc.csproj">
+      <Project>{51dec5ed-8897-43c4-a612-44a2dd9da07b}</Project>
+      <Name>Abp.Rpc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
