--- a/src/samples/console/Rpc.Server2/Rpc.Server2.csproj
+++ b/src/samples/console/Rpc.Server2/Rpc.Server2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{472A480A-D42E-4D32-87E4-B21431544635}</ProjectGuid>
+    <ProjectGuid>{B1AF2109-3747-4DEF-8148-42FFE88A8BF5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rpc.Client</RootNamespace>
-    <AssemblyName>Rpc.Client</AssemblyName>
+    <RootNamespace>Rpc.Server2</RootNamespace>
+    <AssemblyName>Rpc.Server2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
@@ -45,7 +49,16 @@
       <HintPath>..\..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,40 +70,36 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RpcClientModule.cs" />
+    <Compile Include="RpcServer2Module.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\modules\BodeAbp.Product\BodeAbp.Product.csproj">
-      <Project>{c771c4f7-465a-4778-a8ed-4fe7c50bb94a}</Project>
-      <Name>BodeAbp.Product</Name>
+    <ProjectReference Include="..\..\..\frame\Abp.AutoMapper\Abp.AutoMapper.csproj">
+      <Project>{06eb5f7c-b974-4775-a305-f175d645f7c9}</Project>
+      <Name>Abp.AutoMapper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.ProxyGenerator\Abp.Rpc.ProxyGenerator.csproj">
-      <Project>{41251653-1219-4db1-a77b-fb6c932700b3}</Project>
-      <Name>Abp.Rpc.ProxyGenerator</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.Transport.DotNetty\Abp.Rpc.Transport.DotNetty.csproj">
-      <Project>{38be1000-5478-48d3-9fc2-9fafb523dbcf}</Project>
-      <Name>Abp.Rpc.Transport.DotNetty</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.Transport.Simple\Abp.Rpc.Transport.Simple.csproj">
-      <Project>{d52aee53-199a-446e-a73b-dbca1670ef0f}</Project>
-      <Name>Abp.Rpc.Transport.Simple</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\rpc\Abp.Rpc\Abp.Rpc.csproj">
-      <Project>{51dec5ed-8897-43c4-a612-44a2dd9da07b}</Project>
-      <Name>Abp.Rpc</Name>
+    <ProjectReference Include="..\..\..\frame\Abp.EntityFramework\Abp.EntityFramework.csproj">
+      <Project>{948F0CAF-3382-4E03-9A0F-0DDB206FE40D}</Project>
+      <Name>Abp.EntityFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\frame\Abp\Abp.csproj">
       <Project>{2c221d3b-5f54-4c5b-8082-318636415132}</Project>
       <Name>Abp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\modules\BodeAbp.Activity\BodeAbp.Activity.csproj">
-      <Project>{b60885e6-735e-4926-97a2-8699e6725f1f}</Project>
-      <Name>BodeAbp.Activity</Name>
+    <ProjectReference Include="..\..\..\modules\BodeAbp.Product\BodeAbp.Product.csproj">
+      <Project>{c771c4f7-465a-4778-a8ed-4fe7c50bb94a}</Project>
+      <Name>BodeAbp.Product</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\rpc\Abp.Rpc.Transport.DotNetty\Abp.Rpc.Transport.DotNetty.csproj">
+      <Project>{38be1000-5478-48d3-9fc2-9fafb523dbcf}</Project>
+      <Name>Abp.Rpc.Transport.DotNetty</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\rpc\Abp.Rpc\Abp.Rpc.csproj">
+      <Project>{51dec5ed-8897-43c4-a612-44a2dd9da07b}</Project>
+      <Name>Abp.Rpc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
