--- a/src/samples/web/WebDemo.Web/WebDemo.Web.csproj
+++ b/src/samples/web/WebDemo.Web/WebDemo.Web.csproj
@@ -659,17 +659,18 @@
     <Content Include="Content\js\plugs\ueditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="Content\js\plugs\ueditor\third-party\video-js\font\vjs.woff" />
     <Content Include="Areas\Admin\Views\Shared\_TreeGridLayout.cshtml" />
-    <Content Include="Areas\Admin\Views\Identity\OrganzationList.cshtml" />
-    <Content Include="Areas\Admin\Views\Identity\RoleList.cshtml" />
-    <Content Include="Areas\Admin\Views\Identity\UserList.cshtml" />
-    <Content Include="Areas\Admin\Views\Setting\SettingList.cshtml" />
-    <Content Include="Areas\Admin\Views\Setting\AuditLogs.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\OrganzationList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\RoleList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\UserList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\SettingList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\AuditLogs.cshtml" />
     <Content Include="Areas\Admin\Views\Attribute\AttributeList.cshtml" />
     <Content Include="Areas\Admin\Views\Attribute\AttributeOptionList.cshtml" />
     <Content Include="Areas\Admin\Views\Attribute\SkuAttributeList.cshtml" />
     <Content Include="Areas\Admin\Views\Attribute\SkuAttributeOptionList.cshtml" />
     <Content Include="Areas\Admin\Views\Attribute\ClassifyList.cshtml" />
-    <Content Include="Areas\Admin\Views\Setting\BackgroundJobList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\BackgroundJobList.cshtml" />
+    <Content Include="Areas\Admin\Views\Zero\NavigationList.cshtml" />
     <None Include="Properties\PublishProfiles\211.149.223.24.pubxml" />
     <Content Include="Content\js\bode\bode.js" />
     <Content Include="Content\js\plugs\layer\layer.js" />
@@ -695,8 +696,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\Product\AttributeController.cs" />
     <Compile Include="Areas\Admin\Controllers\Product\ProductController.cs" />
-    <Compile Include="Areas\Admin\Controllers\Zero\IdentityController.cs" />
-    <Compile Include="Areas\Admin\Controllers\Zero\SettingController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ZeroController.cs" />
     <Compile Include="Content\js\plugs\ueditor\net\App_Code\Config.cs" />
     <Compile Include="Content\js\plugs\ueditor\net\App_Code\ConfigHandler.cs" />
     <Compile Include="Content\js\plugs\ueditor\net\App_Code\CrawlerHandler.cs" />
