--- a/src/samples/web/WebDemo.Web/Web.config
+++ b/src/samples/web/WebDemo.Web/Web.config
@@ -27,7 +27,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="server=114.55.92.28;uid=sa;pwd=admin@123456;database=BodeAbp;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Asynchronous Processing=true;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=.;Integrated Security=true;Initial Catalog=BodeAbp;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100;Asynchronous Processing=true;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
