1、添加webapi签名验证的filter 2、添加webapi接口ip请求次数限制的MessageHandler 3、使用store.js作为前端的存储

--- a/src/frame/Abp.Web.Api/Abp.Web.Api.csproj
+++ b/src/frame/Abp.Web.Api/Abp.Web.Api.csproj
@@ -85,6 +85,12 @@
   <ItemGroup>
     <Compile Include="Configuration\Startup\AbpWebApiConfigurationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApi\Caching\InMemoryThrottleStore.cs" />
+    <Compile Include="WebApi\Caching\IThrottleStore.cs" />
+    <Compile Include="WebApi\Caching\ThrottleEntry.cs" />
+    <Compile Include="WebApi\Extensions\HttpMessageExtensions.cs" />
+    <Compile Include="WebApi\Handlers\ThrottlingHandler.cs" />
+    <Compile Include="WebApi\Security\Signature\AbpSignatureApiFilter.cs" />
     <Compile Include="WebApi\Upload\ApiUploadHelper.cs" />
     <Compile Include="WebApi\Upload\CustomMultipartFormDataStreamProvider.cs" />
     <Compile Include="WebApi\AbpWebApiModule.cs" />
