--- a/src/frame/Abp/Abp.csproj
+++ b/src/frame/Abp/Abp.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Helper\CombHelper.cs" />
     <Compile Include="Helper\DateTimeHelper.cs" />
     <Compile Include="Helper\GetRequestHelper.cs" />
+    <Compile Include="Helper\HashHelper.cs" />
     <Compile Include="Helper\HtmlHelper.cs" />
     <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="Helper\JsonHelper.cs" />
