--- a/src/samples/web/WebDemo.Web/WebDemo.Web.csproj
+++ b/src/samples/web/WebDemo.Web/WebDemo.Web.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>
     </DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
