--- a/src/samples/web/WebDemo.WebApi/WebDemo.WebApi.csproj
+++ b/src/samples/web/WebDemo.WebApi/WebDemo.WebApi.csproj
@@ -25,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>
     </DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
