--- a/src/scaffolding/BodeAbp.Scaffolding/BodeAbp.Scaffolding.csproj
+++ b/src/scaffolding/BodeAbp.Scaffolding/BodeAbp.Scaffolding.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
